# admin_edificios

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: release.yml
docs/: PLAN_RESPALDOS.md
prisma/: schema.prisma
prisma/migrations/: init.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: error.tsx  global-error.tsx  layout.tsx  page.tsx
src/app/analisis/: analisis-client.tsx  page.tsx
src/app/apartamentos/: actions.ts  apartamentos-client.tsx  page.tsx
src/app/bancos/: actions.ts  bancos-client.tsx  page.tsx
src/app/bitacora/: actions.ts  bitacora-client.tsx  page.tsx
src/app/flujo-caja/: flujo-caja-client.tsx  page.tsx
src/app/importes-generales/: importes-generales-client.tsx  page.tsx
src/app/informes/: actions.ts  informes-client.tsx  page.tsx
src/app/inquilinos/: actions.ts  inquilinos-client.tsx  page.tsx
src/app/mensajes/: mensajes-client.tsx  page.tsx
src/app/proyectos/: page.tsx  proyectos-client.tsx
src/app/registro-pagos/: page.tsx  (+1 more)
src/components/: back-to-home.tsx  building-view.tsx  database-initializer.tsx  dev-banner.tsx  updater-wrapper.tsx  updater.tsx
src/lib/: backup.ts  bitacora-pdf.ts  database.ts  excel-export.ts  flujo-caja-pdf.ts  informe-excel.ts  informe-pdf.ts  mensajes.ts  pdf.ts  proyecto-pdf.ts  save-pdf.ts  servicios-pdf.ts  utils.ts
(+14 files in other folders)
